HTML: Video Player

--- a/index.html
+++ b/index.html
@@ -24,12 +24,29 @@
         </div>
         <div class="navbar__right">
             <button class="alarm">
-                <i class="fa fa-solid fa-bell"></i>
+                <i class="fas fa-regular fa-bell"></i>
                 <span class="badge">3</span>
             </button>
-            <img class="profile__img" src="img/profile.jpg" alt="profile" width="25px">
+            <button class="profile">
+                <img class="profile__img" src="img/profile.jpg" alt="profile" width="25px">                
+            </button>
         </div>
     </nav>
+
+    <section id="player">
+        <video class="video" controls width="650" src="video/waktaverse.mp4"></video>
+    </section>
+
+    <section id="information">
+        <div class="meta">
+            <ul class="hashtags">
+                <a href="#"><li>#WOOWAKGOOD</li></a>
+                <a href="#"><li>#WAKTAVERSE</li></a>
+                <a href="#"><li>#ISEDOL</li></a>
+            </ul>
+            
+        </div>
+    </section>
     
 </body>
 </html>
